2 lines added in home.html

--- a/home.html
+++ b/home.html
@@ -2,5 +2,7 @@
     <body>
         <h1>Home Page</h1>
         <p>Adding new paragraph</p>
+        <h1>Line 1</h1>
+        <h2>Line2</h2>
     </body>
 </html>
