--- a/home.html
+++ b/home.html
@@ -4,5 +4,7 @@
         <p>Adding new paragraph</p>
         <h1>Line 1</h1>
         <h2>Line2</h2>
+        <p>Para 1</p>
+        <p>Para 2</p>
     </body>
 </html>
