--- a/home.html
+++ b/home.html
@@ -4,11 +4,8 @@
         <p>Adding new paragraph</p>
         <h1>Line 1</h1>
         <h2>Line2</h2>
-<<<<<<< HEAD
         <p>Para 1</p>
         <p>Para 2</p>
-=======
-        <p>;;;;;;</p>
->>>>>>> testing
+        <p>Para 3</p>
     </body>
 </html>
