form tag added in home.html

--- a/home.html
+++ b/home.html
@@ -7,5 +7,10 @@
         <p>Para 1</p>
         <p>Para 2</p>
         <p>Para 3</p>
+
+        <form>
+            <input type="text" value="Kalyani">
+            
+        </form>
     </body>
 </html>
